--- a/ProductMasterApp/gradle.properties
+++ b/ProductMasterApp/gradle.properties
@@ -25,6 +25,7 @@ spring_boot_version=1.3.3.RELEASE
 h2_version=1.4.188
 
 mapstruct_version=1.0.0.Final
+test_test=test
 
 
 ## below are some of the gradle performance improvement settings that can be used as required, these are not enabled by default
